--- a/package.json
+++ b/package.json
@@ -3,7 +3,11 @@
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.0"
   },
-  "scripts":{
+  "scripts": {
     "run": "webpack --watch"
+  },
+  "devDependencies": {
+    "ts-loader": "^9.4.2",
+    "typescript": "^4.9.3"
   }
 }
