--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,8 @@
 {
     "compilerOptions": {
-        "outDir": "./dist/",
-        "noImplicitAny": true,
-        "module": "es6",
-        "target": "es5",
-        "allowJs": true,
-        "moduleResolution": "node"
+      "outDir": "./dist/",
+      "strict": false,
+      "moduleResolution": "node",
+      "target": "es2020",
     }
 }
