--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,12 @@
 {
-    "compilerOptions": {
-      "outDir": "./dist/",
-      "strict": false,
-      "moduleResolution": "node",
-      "target": "es2020",
-    }
+  "compilerOptions": {
+    "outDir": "./dist/",
+    "noImplicitAny": true,
+    "module": "es6",
+    "target": "es5",
+    "jsx": "react",
+    "allowJs": true,
+    "moduleResolution": "node",
+    "lib": ["dom"]
+  }
 }
