--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "typo-js": "^1.2.2",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.0"
   },
@@ -7,6 +8,7 @@
     "build": "webpack --watch"
   },
   "devDependencies": {
+    "@types/typo-js": "^1.2.0",
     "ts-loader": "^9.4.2",
     "typescript": "^4.9.3"
   }
