--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "devDependencies": {
     "@types/typo-js": "^1.2.0",
+    "coffee-loader": "^4.0.0",
+    "coffeescript": "^2.7.0",
     "ts-loader": "^9.4.2",
     "typescript": "^4.9.3"
   }
